--- a/prova.css
+++ b/prova.css
@@ -1,6 +1,9 @@
 *{
     margin: 0;
 }
+body{
+    background-color: rgb(205, 225, 255);  
+}
 .header{
     width: 100%;
     background-color: rgb(89, 119, 163);
@@ -11,20 +14,49 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     position: fixed;
 }
+.header2{
+    width: 100%;
+    background-color: rgb(89, 119, 163);
+    display: flex;
+    flex-direction: column;
+    padding: 30px 5px;
+    align-items: center;
+    justify-content: space-around;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 20px;
+}
 .ul{
     display: flex;
     flex-direction: column;
 }
+.ul2{
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 .ul li {
     margin: 0 10px;
     list-style: none;
     color: rgb(0, 0, 0);
+}
+.ul2 li {
+    margin: 0 10px;
+    list-style: none;
+    color: rgb(255, 255, 255);
 }
 .img{
     height: 40px;
 }
 .logo{
     height: 100%;
+}
+.sociais{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 #baner {
     height: 300px;
@@ -37,8 +69,285 @@
     background-size: cover;
     background-repeat: no-repeat;
     transition: border-color 0.5s ease;
+    margin-bottom: 20px;
 }
-
-@media (min-width:  760px){
-   
+.re{
+    display: grid;
+    grid-template-columns: 300px;
+    grid-template-rows: 150px 170px;
+    gap: 10px 15px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.re1{
+    height: 150px;
+    width: 300px;
+    background-color: blueviolet;
+    border-radius: 30px;
+}
+.re2{
+    height: 150px;
+    width: 300px;
+    background-color: rgb(103, 91, 121);
+    border-radius: 30px;
+}
+.retangulo{
+    display: grid;
+    grid-template-columns: 200px;
+    grid-template-rows: 150px 150px 150px 150px 150px 150px 150px 150px 150px 150px 150px 150px;
+    gap: 10px 15px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.retangulo1{
+    height: 150px;
+    width: 200px;
+    background-color: blueviolet;
+    border-radius: 10px;
+}
+.retangulo2{
+    height: 150px;
+    width: 200px;
+    background-color: rgb(79, 71, 87);
+    border-radius: 10px;
+}
+.retangulo3{
+    height: 150px;
+    width: 200px;
+    background-color: blueviolet;
+    border-radius: 10px;
+}
+.retangulo4{
+    height: 150px;
+    width: 200px;
+    background-color: rgb(79, 71, 87);
+    border-radius: 10px;
+}
+.retangulo5{
+    height: 150px;
+    width: 200px;
+    background-color: blueviolet;
+    border-radius: 10px;
+}
+.retangulo6{
+    height: 150px;
+    width: 200px;
+    background-color: rgb(79, 71, 87);
+    border-radius: 10px;
+}
+.retangulo7{
+    height: 150px;
+    width: 200px;
+    background-color: blueviolet;
+    border-radius: 10px;
+}
+.retangulo8{
+    height: 150px;
+    width: 200px;
+    background-color: rgb(79, 71, 87);
+    border-radius: 10%;
+}
+.retangulo9{
+    height: 150px;
+    width: 200px;
+    background-color: blueviolet;
+    border-radius: 10px;
+}
+.retangulo0{
+    height: 150px;
+    width: 200px;
+    background-color: rgb(79, 71, 87);
+    border-radius: 10px;
+}
+.retangulol{
+    height: 150px;
+    width: 200px;
+    background-color: blueviolet;
+    border-radius: 10px;
+}
+.retangulos{
+    height: 150px;
+    width: 200px;
+    background-color: rgb(79, 71, 87);
+    border-radius: 10px;
+}
+p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(255, 255, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.cor{
+    width: 200px;
+    height: 35%;
+    background-color: rgb(15, 40, 54);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    color: rgb(255, 255, 255);
+}
+@media (min-width:  426px){
+    .re{
+        display: grid;
+        grid-template-columns: 300px 300px;
+        grid-template-rows: 170px;
+        gap: 10px 15px;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .retangulo{
+        display: grid;
+        grid-template-columns: 200px 200px 200px;
+        grid-template-rows: 150px 150px 150px 150px;
+        gap: 10px 15px;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+}
+@media (min-width:  769px){
+    #baner {
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: url(https://i0.wp.com/www.indavoula.com.br/wp-content/uploads/2019/09/como-vender-foto-na-internet-01.png?fit=1200%2C667&ssl=1);
+        background-position: 70% 0%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        transition: border-color 0.5s ease;
+        margin-bottom: 20px;
+    }
+    .header2{
+        width: 100%;
+        background-color: rgb(89, 119, 163);
+        display: flex;
+        flex-direction: row;
+        padding: 30px 5px;
+        align-items: center;
+        justify-content: space-around;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: 20px;
+    }
+    .sociais2{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .sociais{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .re{
+        display: grid;
+        grid-template-columns: 300px 300px;
+        grid-template-rows: 170px;
+        gap: 10px 15px;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .re1{
+        height: 150px;
+        width: 300px;
+        background-color: blueviolet;
+        border-radius: 30px;
+    }
+    .re2{
+        height: 150px;
+        width: 300px;
+        background-color: rgb(103, 91, 121);
+        border-radius: 30px;
+    }
+    .retangulo{
+        display: grid;
+        grid-template-columns: 200px 200px 200px 200px;
+        grid-template-rows: 150px 150px 150px 150px;
+        gap: 10px 15px;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .retangulo1{
+        height: 150px;
+        width: 200px;
+        background-color: blueviolet;
+        border-radius: 10%;
+    }
+    .retangulo2{
+        height: 150px;
+        width: 200px;
+        background-color: rgb(79, 71, 87);
+        border-radius: 10%;
+    }
+    .retangulo3{
+        height: 150px;
+        width: 200px;
+        background-color: blueviolet;
+        border-radius: 10%;
+    }
+    .retangulo4{
+        height: 150px;
+        width: 200px;
+        background-color: rgb(79, 71, 87);
+        border-radius: 10%;
+    }
+    .retangulo5{
+        height: 150px;
+        width: 200px;
+        background-color: blueviolet;
+        border-radius: 10%;
+    }
+    .retangulo6{
+        height: 150px;
+        width: 200px;
+        background-color: rgb(79, 71, 87);
+        border-radius: 10%;
+    }
+    .retangulo7{
+        height: 150px;
+        width: 200px;
+        background-color: blueviolet;
+        border-radius: 10%;
+    }
+    .retangulo8{
+        height: 150px;
+        width: 200px;
+        background-color: rgb(79, 71, 87);
+        border-radius: 10%;
+    }
+    .retangulo9{
+        height: 150px;
+        width: 200px;
+        background-color: blueviolet;
+        border-radius: 10%;
+    }
+    .retangulo0{
+        height: 150px;
+        width: 200px;
+        background-color: rgb(79, 71, 87);
+        border-radius: 10%;
+    }
+    .retangulol{
+        height: 150px;
+        width: 200px;
+        background-color: blueviolet;
+        border-radius: 10%;
+    }
+    .retangulos{
+        height: 150px;
+        width: 200px;
+        background-color: rgb(79, 71, 87);
+        border-radius: 10%;
+    }
 }
