--- a/prova.css
+++ b/prova.css
@@ -83,19 +83,26 @@ body{
 .re1{
     height: 150px;
     width: 300px;
-    background-color: blueviolet;
+    background: url(https://i.pinimg.com/enabled_lo_mid/736x/e7/db/3e/e7db3eab37b4bc2ec5c3bd68f3eb952d.jpg);
+    background-position: 10% 20%;
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 30px;
 }
 .re2{
     height: 150px;
     width: 300px;
-    background-color: rgb(103, 91, 121);
+    background: url(https://i.pinimg.com/enabled_lo_mid/736x/0e/9b/8d/0e9b8d7be8ef4213d74afc9568668f4e.jpg);
+    background-position: 10% 20%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 30px;
     border-radius: 30px;
 }
 .retangulo{
     display: grid;
-    grid-template-columns: 200px;
-    grid-template-rows: 150px 150px 150px 150px 150px 150px 150px 150px 150px 150px 150px 150px;
+    grid-template-columns: 200px 200px;
+    grid-template-rows: 150px 150px 150px 150px 150px 150px;
     gap: 10px 15px;
     flex-direction: column;
     justify-content: center;
@@ -104,73 +111,109 @@ body{
 .retangulo1{
     height: 150px;
     width: 200px;
-    background-color: blueviolet;
+    background: url(https://i.pinimg.com/enabled_lo_mid/736x/81/ef/3a/81ef3af34f21dabc519c0db89728c179.jpg);
+    background-position: 10% 20%;
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 10px;
 }
 .retangulo2{
     height: 150px;
     width: 200px;
-    background-color: rgb(79, 71, 87);
+    background: url(https://i.pinimg.com/736x/12/c2/2b/12c22bec906f03ad9ee8a3a0defd50a0.jpg);
+    background-position: 10% 20%;
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 10px;
 }
 .retangulo3{
     height: 150px;
     width: 200px;
-    background-color: blueviolet;
+    background: url(https://i.pinimg.com/736x/e7/90/25/e79025ecc597f4cb9938c4ca17c52f2d.jpg);
+    background-position: 10% 20%;
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 10px;
 }
 .retangulo4{
     height: 150px;
     width: 200px;
-    background-color: rgb(79, 71, 87);
+    background: url(https://i.pinimg.com/enabled_lo_mid/736x/56/3f/a3/563fa3594cc38e30bc976aaf3aa74729.jpg);
+    background-position: 10% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 10px;
 }
 .retangulo5{
     height: 150px;
     width: 200px;
-    background-color: blueviolet;
+    background: url(https://i.pinimg.com/enabled_lo_mid/736x/81/ef/3a/81ef3af34f21dabc519c0db89728c179.jpg);
+    background-position: 10% 20%;
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 10px;
 }
 .retangulo6{
     height: 150px;
     width: 200px;
-    background-color: rgb(79, 71, 87);
+    background: url(https://i.pinimg.com/736x/12/c2/2b/12c22bec906f03ad9ee8a3a0defd50a0.jpg);
+    background-position: 10% 20%;
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 10px;
 }
 .retangulo7{
     height: 150px;
     width: 200px;
-    background-color: blueviolet;
+    background: url(https://i.pinimg.com/736x/e7/90/25/e79025ecc597f4cb9938c4ca17c52f2d.jpg);
+    background-position: 10% 20%;
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 10px;
 }
 .retangulo8{
     height: 150px;
     width: 200px;
-    background-color: rgb(79, 71, 87);
+    background: url(https://i.pinimg.com/enabled_lo_mid/736x/56/3f/a3/563fa3594cc38e30bc976aaf3aa74729.jpg);
+    background-position: 10% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 10%;
 }
 .retangulo9{
     height: 150px;
     width: 200px;
-    background-color: blueviolet;
+    background: url(https://i.pinimg.com/enabled_lo_mid/736x/81/ef/3a/81ef3af34f21dabc519c0db89728c179.jpg);
+    background-position: 10% 20%;
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 10px;
 }
 .retangulo0{
     height: 150px;
     width: 200px;
-    background-color: rgb(79, 71, 87);
+    background: url(https://i.pinimg.com/736x/12/c2/2b/12c22bec906f03ad9ee8a3a0defd50a0.jpg);
+    background-position: 10% 20%;
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 10px;
 }
 .retangulol{
     height: 150px;
     width: 200px;
-    background-color: blueviolet;
+    background: url(https://i.pinimg.com/736x/e7/90/25/e79025ecc597f4cb9938c4ca17c52f2d.jpg);
+    background-position: 10% 20%;
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 10px;
 }
 .retangulos{
     height: 150px;
     width: 200px;
-    background-color: rgb(79, 71, 87);
+    background: url(https://i.pinimg.com/enabled_lo_mid/736x/56/3f/a3/563fa3594cc38e30bc976aaf3aa74729.jpg);
+    background-position: 10% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 10px;
 }
 p{
@@ -257,97 +300,13 @@ p{
         justify-content: center;
         align-items: center;
     }
-    .re1{
-        height: 150px;
-        width: 300px;
-        background-color: blueviolet;
-        border-radius: 30px;
-    }
-    .re2{
-        height: 150px;
-        width: 300px;
-        background-color: rgb(103, 91, 121);
-        border-radius: 30px;
-    }
     .retangulo{
         display: grid;
         grid-template-columns: 200px 200px 200px 200px;
-        grid-template-rows: 150px 150px 150px 150px;
+        grid-template-rows: 150px 150px 150px;
         gap: 10px 15px;
         flex-direction: row;
         justify-content: center;
         align-items: center;
-    }
-    .retangulo1{
-        height: 150px;
-        width: 200px;
-        background-color: blueviolet;
-        border-radius: 10%;
-    }
-    .retangulo2{
-        height: 150px;
-        width: 200px;
-        background-color: rgb(79, 71, 87);
-        border-radius: 10%;
-    }
-    .retangulo3{
-        height: 150px;
-        width: 200px;
-        background-color: blueviolet;
-        border-radius: 10%;
-    }
-    .retangulo4{
-        height: 150px;
-        width: 200px;
-        background-color: rgb(79, 71, 87);
-        border-radius: 10%;
-    }
-    .retangulo5{
-        height: 150px;
-        width: 200px;
-        background-color: blueviolet;
-        border-radius: 10%;
-    }
-    .retangulo6{
-        height: 150px;
-        width: 200px;
-        background-color: rgb(79, 71, 87);
-        border-radius: 10%;
-    }
-    .retangulo7{
-        height: 150px;
-        width: 200px;
-        background-color: blueviolet;
-        border-radius: 10%;
-    }
-    .retangulo8{
-        height: 150px;
-        width: 200px;
-        background-color: rgb(79, 71, 87);
-        border-radius: 10%;
-    }
-    .retangulo9{
-        height: 150px;
-        width: 200px;
-        background-color: blueviolet;
-        border-radius: 10%;
-    }
-    .retangulo0{
-        height: 150px;
-        width: 200px;
-        background-color: rgb(79, 71, 87);
-        border-radius: 10%;
-    }
-    .retangulol{
-        height: 150px;
-        width: 200px;
-        background-color: blueviolet;
-        border-radius: 10%;
-    }
-    .retangulos{
-        height: 150px;
-        width: 200px;
-        background-color: rgb(79, 71, 87);
-        border-radius: 10%;
     }
 }
