--- a/prova.css
+++ b/prova.css
@@ -81,6 +81,10 @@ body{
     align-items: center;
 }
 .re1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     height: 150px;
     width: 300px;
     background: url(https://i.pinimg.com/enabled_lo_mid/736x/e7/db/3e/e7db3eab37b4bc2ec5c3bd68f3eb952d.jpg);
@@ -90,6 +94,10 @@ body{
     border-radius: 30px;
 }
 .re2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     height: 150px;
     width: 300px;
     background: url(https://i.pinimg.com/enabled_lo_mid/736x/0e/9b/8d/0e9b8d7be8ef4213d74afc9568668f4e.jpg);
@@ -109,6 +117,10 @@ body{
     align-items: center;
 }
 .retangulo1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     height: 150px;
     width: 200px;
     background: url(https://i.pinimg.com/enabled_lo_mid/736x/81/ef/3a/81ef3af34f21dabc519c0db89728c179.jpg);
@@ -118,6 +130,10 @@ body{
     border-radius: 10px;
 }
 .retangulo2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     height: 150px;
     width: 200px;
     background: url(https://i.pinimg.com/736x/12/c2/2b/12c22bec906f03ad9ee8a3a0defd50a0.jpg);
@@ -127,6 +143,10 @@ body{
     border-radius: 10px;
 }
 .retangulo3{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     height: 150px;
     width: 200px;
     background: url(https://i.pinimg.com/736x/e7/90/25/e79025ecc597f4cb9938c4ca17c52f2d.jpg);
@@ -136,6 +156,10 @@ body{
     border-radius: 10px;
 }
 .retangulo4{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     height: 150px;
     width: 200px;
     background: url(https://i.pinimg.com/enabled_lo_mid/736x/56/3f/a3/563fa3594cc38e30bc976aaf3aa74729.jpg);
@@ -145,6 +169,10 @@ body{
     border-radius: 10px;
 }
 .retangulo5{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     height: 150px;
     width: 200px;
     background: url(https://i.pinimg.com/enabled_lo_mid/736x/81/ef/3a/81ef3af34f21dabc519c0db89728c179.jpg);
@@ -154,6 +182,10 @@ body{
     border-radius: 10px;
 }
 .retangulo6{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     height: 150px;
     width: 200px;
     background: url(https://i.pinimg.com/736x/12/c2/2b/12c22bec906f03ad9ee8a3a0defd50a0.jpg);
@@ -163,6 +195,10 @@ body{
     border-radius: 10px;
 }
 .retangulo7{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     height: 150px;
     width: 200px;
     background: url(https://i.pinimg.com/736x/e7/90/25/e79025ecc597f4cb9938c4ca17c52f2d.jpg);
@@ -172,6 +208,10 @@ body{
     border-radius: 10px;
 }
 .retangulo8{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     height: 150px;
     width: 200px;
     background: url(https://i.pinimg.com/enabled_lo_mid/736x/56/3f/a3/563fa3594cc38e30bc976aaf3aa74729.jpg);
@@ -181,6 +221,10 @@ body{
     border-radius: 10%;
 }
 .retangulo9{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     height: 150px;
     width: 200px;
     background: url(https://i.pinimg.com/enabled_lo_mid/736x/81/ef/3a/81ef3af34f21dabc519c0db89728c179.jpg);
@@ -190,6 +234,10 @@ body{
     border-radius: 10px;
 }
 .retangulo0{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     height: 150px;
     width: 200px;
     background: url(https://i.pinimg.com/736x/12/c2/2b/12c22bec906f03ad9ee8a3a0defd50a0.jpg);
@@ -199,6 +247,10 @@ body{
     border-radius: 10px;
 }
 .retangulol{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     height: 150px;
     width: 200px;
     background: url(https://i.pinimg.com/736x/e7/90/25/e79025ecc597f4cb9938c4ca17c52f2d.jpg);
@@ -208,6 +260,10 @@ body{
     border-radius: 10px;
 }
 .retangulos{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     height: 150px;
     width: 200px;
     background: url(https://i.pinimg.com/enabled_lo_mid/736x/56/3f/a3/563fa3594cc38e30bc976aaf3aa74729.jpg);
@@ -220,7 +276,23 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.re p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: rgb(255, 255, 255);
+    font-size: 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.retangulo p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(110, 92, 92);
+    font-size: 25px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .cor{
