--- a/prova.css
+++ b/prova.css
@@ -123,7 +123,7 @@ body{
     flex-direction: column;
     height: 150px;
     width: 200px;
-    background: url(https://i.pinimg.com/enabled_lo_mid/736x/81/ef/3a/81ef3af34f21dabc519c0db89728c179.jpg);
+    background: url(https://i.pinimg.com/736x/61/a0/22/61a02263248ddd9ae5ed8dba6fae9ea7.jpg);
     background-position: 10% 20%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -136,7 +136,7 @@ body{
     flex-direction: column;
     height: 150px;
     width: 200px;
-    background: url(https://i.pinimg.com/736x/12/c2/2b/12c22bec906f03ad9ee8a3a0defd50a0.jpg);
+    background: url(https://i.pinimg.com/236x/f1/1f/84/f11f84430e7e360e0ee1f45db4af898e.jpg);
     background-position: 10% 20%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -149,7 +149,7 @@ body{
     flex-direction: column;
     height: 150px;
     width: 200px;
-    background: url(https://i.pinimg.com/736x/e7/90/25/e79025ecc597f4cb9938c4ca17c52f2d.jpg);
+    background: url(https://i.pinimg.com/236x/8e/8d/ad/8e8dad3c385da5e65c6dd99d1fcb1276.jpg);
     background-position: 10% 20%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -162,7 +162,7 @@ body{
     flex-direction: column;
     height: 150px;
     width: 200px;
-    background: url(https://i.pinimg.com/enabled_lo_mid/736x/56/3f/a3/563fa3594cc38e30bc976aaf3aa74729.jpg);
+    background: url(https://i.pinimg.com/474x/ae/6d/d3/ae6dd31a05237ca4ae2ca2b854500565.jpg);
     background-position: 10% 50%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -175,7 +175,7 @@ body{
     flex-direction: column;
     height: 150px;
     width: 200px;
-    background: url(https://i.pinimg.com/enabled_lo_mid/736x/81/ef/3a/81ef3af34f21dabc519c0db89728c179.jpg);
+    background: url(https://i.pinimg.com/736x/61/a0/22/61a02263248ddd9ae5ed8dba6fae9ea7.jpg);
     background-position: 10% 20%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -188,7 +188,7 @@ body{
     flex-direction: column;
     height: 150px;
     width: 200px;
-    background: url(https://i.pinimg.com/736x/12/c2/2b/12c22bec906f03ad9ee8a3a0defd50a0.jpg);
+    background: url(https://i.pinimg.com/236x/f1/1f/84/f11f84430e7e360e0ee1f45db4af898e.jpg);
     background-position: 10% 20%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -201,7 +201,7 @@ body{
     flex-direction: column;
     height: 150px;
     width: 200px;
-    background: url(https://i.pinimg.com/736x/e7/90/25/e79025ecc597f4cb9938c4ca17c52f2d.jpg);
+    background: url(https://i.pinimg.com/236x/8e/8d/ad/8e8dad3c385da5e65c6dd99d1fcb1276.jpg);
     background-position: 10% 20%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -214,7 +214,7 @@ body{
     flex-direction: column;
     height: 150px;
     width: 200px;
-    background: url(https://i.pinimg.com/enabled_lo_mid/736x/56/3f/a3/563fa3594cc38e30bc976aaf3aa74729.jpg);
+    background: url(https://i.pinimg.com/474x/ae/6d/d3/ae6dd31a05237ca4ae2ca2b854500565.jpg);
     background-position: 10% 50%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -227,7 +227,7 @@ body{
     flex-direction: column;
     height: 150px;
     width: 200px;
-    background: url(https://i.pinimg.com/enabled_lo_mid/736x/81/ef/3a/81ef3af34f21dabc519c0db89728c179.jpg);
+    background: url(https://i.pinimg.com/736x/61/a0/22/61a02263248ddd9ae5ed8dba6fae9ea7.jpg);
     background-position: 10% 20%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -240,7 +240,7 @@ body{
     flex-direction: column;
     height: 150px;
     width: 200px;
-    background: url(https://i.pinimg.com/736x/12/c2/2b/12c22bec906f03ad9ee8a3a0defd50a0.jpg);
+    background: url(https://i.pinimg.com/236x/f1/1f/84/f11f84430e7e360e0ee1f45db4af898e.jpg);
     background-position: 10% 20%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -253,7 +253,7 @@ body{
     flex-direction: column;
     height: 150px;
     width: 200px;
-    background: url(https://i.pinimg.com/736x/e7/90/25/e79025ecc597f4cb9938c4ca17c52f2d.jpg);
+    background: url(https://i.pinimg.com/236x/8e/8d/ad/8e8dad3c385da5e65c6dd99d1fcb1276.jpg);
     background-position: 10% 20%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -266,7 +266,7 @@ body{
     flex-direction: column;
     height: 150px;
     width: 200px;
-    background: url(https://i.pinimg.com/enabled_lo_mid/736x/56/3f/a3/563fa3594cc38e30bc976aaf3aa74729.jpg);
+    background: url(https://i.pinimg.com/474x/ae/6d/d3/ae6dd31a05237ca4ae2ca2b854500565.jpg);
     background-position: 10% 50%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -291,7 +291,7 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
-    color: rgb(110, 92, 92);
+    color: rgb(255, 255, 255);
     font-size: 25px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -305,6 +305,17 @@ p{
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
     color: rgb(255, 255, 255);
+}
+@media (max-width:  375px){
+    .retangulo{
+        display: grid;
+        grid-template-columns: 200px;
+        grid-template-rows: 150px 150px 150px 150px 150px 150px 150px 150px 150px 150px 150px 150px;
+        gap: 10px 15px;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
 }
 @media (min-width:  426px){
     .re{
